# tempo

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  FLATPAK_AUTOMATION.md  INITIAL.md  MOBILE_RESPONSIVE_IMPLEMENTATION_SUMMARY.md  PLANNING.md  README.md  TASK.md  TESTING_MOBILE_RESPONSIVE.md  TODO.md  WARP.md  build.sh  debug_real_app.py  flathub.json  flatpak-flathub.md  meson.build  meson_options.txt  meson_post_install.py  mobile-responsive-test.sh  pr_description.md  pyproject.toml  test_audio.py  test_callback_chain.py  test_flatpak_audio.py  test_metronome_audio_flatpak.py  whatsnew.md
.agent-os/specs/2025-07-26-timing-engine-conversion/: spec.md  tasks.md
.agent-os/specs/2025-07-26-timing-engine-conversion/sub-specs/: technical-spec.md  tests.md
.github/workflows/: update-external-data.yml  update-flatpak.yml
data/: io.github.tobagin.tempo.appdata.xml.in  io.github.tobagin.tempo.desktop.in  io.github.tobagin.tempo.gschema.xml  io.github.tobagin.tempo.gschema.xml.in  io.github.tobagin.tempo.metainfo.xml.in  meson.build  style.css
data/patterns/: backbeat.json  bossa-nova.json  rumba-clave.json  son-clave-23.json  son-clave-32.json  swing-ride.json
data/resources/: tempo.gresource.xml  tempo.gresource.xml.in
data/ui/: keyboard_shortcuts_dialog.blp  main_window.blp  main_window.blp.backup  preferences_dialog.blp  preset_manager_dialog.blp  setlist_manager_dialog.blp
docs/: DEPRECATED_LIBADWAITA_CLASSES.md
openspec/: project.md
openspec/changes/add-midi-output/: design.md  proposal.md  tasks.md
openspec/changes/add-midi-output/specs/midi-output/: spec.md
openspec/changes/add-polyrhythms/: design.md  proposal.md  tasks.md
openspec/changes/add-polyrhythms/specs/polyrhythms/: spec.md
openspec/changes/add-rhythm-patterns/: design.md  proposal.md  tasks.md
openspec/changes/add-rhythm-patterns/specs/rhythm-patterns/: spec.md
openspec/changes/add-sound-type-selection/: design.md  tasks.md
openspec/changes/add-sound-type-selection/specs/audio-playback/: spec.md
openspec/changes/archive/2025-10-20-improve-security-validation/: design.md
openspec/changes/archive/2025-10-20-improve-security-validation/specs/security/: spec.md
openspec/changes/archive/2025-10-20-refactor-code-organization/: design.md  tasks.md
openspec/changes/archive/2025-11-04-add-mobile-responsive-design/: design.md  proposal.md  tasks.md
openspec/changes/archive/2025-11-04-add-mobile-responsive-design/specs/adaptive-ui/: spec.md
openspec/changes/archive/2025-11-04-add-mobile-responsive-design/specs/responsive-layout/: spec.md
openspec/changes/archive/2025-11-04-add-practice-timer/: design.md  proposal.md  tasks.md
openspec/changes/archive/2025-11-04-add-practice-timer/specs/practice-timer/: spec.md
openspec/changes/archive/2025-11-04-add-silent-beats/: design.md  proposal.md  tasks.md
openspec/changes/archive/2025-11-04-add-silent-beats/specs/silent-beats/: spec.md
openspec/changes/archive/2025-11-04-add-sound-type-selection/: proposal.md
openspec/changes/archive/2025-11-04-add-subdivisions/: design.md  proposal.md  tasks.md
openspec/changes/archive/2025-11-04-add-subdivisions/specs/subdivisions/: spec.md
openspec/changes/archive/2025-11-04-add-tempo-presets/: design.md  proposal.md  tasks.md
openspec/changes/archive/2025-11-04-add-tempo-presets/specs/tempo-presets/: spec.md
openspec/changes/archive/2025-11-04-add-tempo-trainer/: design.md  proposal.md  tasks.md
openspec/changes/archive/2025-11-04-add-tempo-trainer/specs/tempo-trainer/: spec.md
openspec/changes/archive/2025-11-05-add-visual-modes/: design.md  proposal.md  tasks.md
openspec/changes/archive/2025-11-05-add-visual-modes/specs/visual-modes/: spec.md
openspec/changes/improve-security-validation/: proposal.md  tasks.md
openspec/changes/refactor-code-organization/: proposal.md
openspec/changes/refactor-code-organization/specs/code-organization/: spec.md
openspec/specs/adaptive-ui/: spec.md
openspec/specs/audio-playback/: spec.md
openspec/specs/code-organization/: spec.md
openspec/specs/practice-timer/: spec.md
openspec/specs/responsive-layout/: spec.md
openspec/specs/security/: spec.md
openspec/specs/silent-beats/: spec.md
openspec/specs/subdivisions/: spec.md
openspec/specs/tempo-presets/: spec.md
openspec/specs/tempo-trainer/: spec.md
openspec/specs/visual-modes/: spec.md
packaging/: io.github.tobagin.tempo-local.yml  io.github.tobagin.tempo.Devel.yml  io.github.tobagin.tempo.devel.yml  io.github.tobagin.tempo.yml
po/: LINGUAS  POTFILES.in  en.po  es.po  ga.po  it.po  it_complete.po  meson.build  mi.po  pt_BR.po  pt_PT.po  tempo.pot  tr.po
scripts/: build.sh  validate-automation.sh
src/: Main.vala  __init__.py  __main__.py  _version.py  audio.py  config.vala.in  keyboard_shortcuts_dialog.vala  main.vala  main_window.py  main_window.vala  meson.build  metronome.py  metronome_engine.vala  preferences_dialog.py  preferences_dialog.vala  simple_audio.py  tempo.in
src/controllers/: MetronomeViewController.vala  PatternViewController.vala  TrainerViewController.vala
src/dialogs/: KeyboardShortcutsDialog.vala  PreferencesDialog.vala  PresetManagerDialog.vala  SetlistManagerDialog.vala
src/utils/: DebugLogger.vala  MetronomeEngine.vala  MutePattern.vala  MutePatternFactory.vala  PatternEngine.vala  PatternLibrary.vala  PracticeTimer.vala  Preset.vala  PresetManager.vala  RhythmPattern.vala  Setlist.vala  SetlistManager.vala  TapTempo.vala  TempoTrainer.vala  VisualMode.vala
src/windows/: MainWindow.vala
tests/: __init__.py  meson.build  test_api_compatibility.vala  test_audio.py  test_metronome.py  test_metronome_engine.vala  test_tap_tempo.vala  test_window.py
ui/: preferences_dialog.blp
